--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,10 @@
 <body class="mat-typography">
     <app-root></app-root>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
+    <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+    <script type="text/javascript">
+        Stripe.setPublishableKey('pk_test_51JRzRxEE3XQS0PxBd0ptTkSYm1QyjBv4PsMegmHYNK7NBjSfOogzpnrSNAv3txExklhZpO3eaMxqvGjMgV8C3F2c00oB0gFw51');
+    </script>
 </body>
 
 </html>
